Revert ACS-1372