@@ -18,7 +18,6 @@
         <module>repository</module>
         <module>remote-api</module>
         <module>packaging</module>
-        <module>amps</module>
     </modules>
 
     <properties>
@@ -26,7 +25,6 @@
         <acs.version.minor>1</acs.version.minor>
         <acs.version.revision>0</acs.version.revision>
         <acs.version.label />
-        <amp.min.version>${acs.version.major}.0.0</amp.min.version>
 
         <version.edition>Community</version.edition>
         <licenseName>community</licenseName>
@@ -36,9 +34,9 @@
         <image.registry>quay.io</image.registry>
 
         <java.version>11</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-        <maven.build.sourceVersion>${java.version}</maven.build.sourceVersion>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.build.sourceVersion>11</maven.build.sourceVersion>
 
         <dir.root>${project.build.directory}/alf_data</dir.root>
 
@@ -64,7 +62,6 @@
         <dependency.webscripts.version>8.18</dependency.webscripts.version>
         <dependency.bouncycastle.version>1.68</dependency.bouncycastle.version>
         <dependency.mockito-core.version>3.9.0</dependency.mockito-core.version>
-        <dependency.mockito-all.version>1.10.19</dependency.mockito-all.version>
         <dependency.org-json.version>20210307</dependency.org-json.version>
         <dependency.commons-dbcp.version>1.4-DBCP330</dependency.commons-dbcp.version>
         <dependency.commons-io.version>2.8.0</dependency.commons-io.version>
@@ -85,12 +82,8 @@
         <dependency.jboss.logging.version>3.4.1.Final</dependency.jboss.logging.version>
         <dependency.camel.version>3.7.1</dependency.camel.version>
         <dependency.activemq.version>5.16.1</dependency.activemq.version>
-        <dependency.apache-compress.version>1.20</dependency.apache-compress.version>
         <dependency.apache.taglibs.version>1.2.5</dependency.apache.taglibs.version>
         <dependency.awaitility.version>4.0.3</dependency.awaitility.version>
-        <dependency.swagger-ui.version>3.38.0</dependency.swagger-ui.version>
-        <dependency.swagger-parser.version>1.0.52</dependency.swagger-parser.version>
-        <dependency.maven-filtering.version>3.1.1</dependency.maven-filtering.version>
 
         <dependency.jakarta-jaxb-api.version>2.3.3</dependency.jakarta-jaxb-api.version>
         <dependency.jakarta-ws-api.version>2.3.3</dependency.jakarta-ws-api.version>
@@ -104,13 +97,10 @@
         <dependency.jakarta-rpc-api.version>1.1.4</dependency.jakarta-rpc-api.version>
 
         <alfresco.googledrive.version>3.2.1.3</alfresco.googledrive.version>
-        <alfresco.aos-module.version>1.4.0.1</alfresco.aos-module.version>
-        <alfresco.api-explorer.version>7.0.0</alfresco.api-explorer.version>
-        <alfresco.maven-plugin.version>2.2.0</alfresco.maven-plugin.version>
+        <alfresco.aos-module.version>1.4.0</alfresco.aos-module.version>
 
-        <dependency.postgresql.version>42.2.20</dependency.postgresql.version>
-        <dependency.mysql.version>8.0.24</dependency.mysql.version>
-        <dependency.mysql-image.version>8</dependency.mysql-image.version>
+        <dependency.postgresql.version>42.2.19</dependency.postgresql.version>
+        <dependency.mysql.version>8.0.23</dependency.mysql.version>
         <dependency.mariadb.version>2.7.2</dependency.mariadb.version>
         <dependency.tas-utility.version>3.0.44</dependency.tas-utility.version>
         <dependency.rest-assured.version>3.3.0</dependency.rest-assured.version>
@@ -120,22 +110,6 @@
         <dependency.tas-webdav.version>1.6</dependency.tas-webdav.version>
         <dependency.tas-ftp.version>1.5</dependency.tas-ftp.version>
         <dependency.tas-dataprep.version>2.6</dependency.tas-dataprep.version>
-
-        <!-- AGS properties shared between community and enterprise -->
-        <activemq.port1>61616</activemq.port1>
-        <activemq.port2>5672</activemq.port2>
-        <postgresql.port>5432</postgresql.port>
-        <postgresql.tests.port>5431</postgresql.tests.port>
-        <mysql.port>3306</mysql.port>
-        <mysql.tests.port>3307</mysql.tests.port>
-
-        <alfresco.data.location>${basedir}/target/alf_test_data</alfresco.data.location>
-        <alfresco.db.hibernate.dialect>org.alfresco.repo.domain.dialect.MySQLInnoDBDialect</alfresco.db.hibernate.dialect>
-        <alfresco.db.name>alfresco</alfresco.db.name>
-        <alfresco.db.username>alfresco</alfresco.db.username>
-        <alfresco.db.password>alfresco</alfresco.db.password>
-        <alfresco.db.host>localhost</alfresco.db.host>
-        <alfresco.test.db.name>alfresco-test</alfresco.test.db.name>
     </properties>
 
     <scm>
@@ -315,6 +289,7 @@
                 <artifactId>spring-webscripts</artifactId>
                 <version>${dependency.webscripts.version}</version>
                 <classifier>tests</classifier>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.alfresco.surf</groupId>
@@ -358,11 +333,6 @@
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
                 <version>1.15</version>
-            </dependency>
-            <dependency>
-                <groupId>commons-lang</groupId>
-                <artifactId>commons-lang</artifactId>
-                <version>2.6</version>
             </dependency>
             <dependency>
                 <groupId>commons-io</groupId>
@@ -458,6 +428,7 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-test</artifactId>
                 <version>${dependency.spring.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -496,16 +467,6 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
                 <version>${dependency.jackson-databind.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.datatype</groupId>
-                <artifactId>jackson-datatype-joda</artifactId>
-                <version>${dependency.jackson.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.dataformat</groupId>
-                <artifactId>jackson-dataformat-yaml</artifactId>
-                <version>${dependency.jackson.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
@@ -630,11 +591,6 @@
                 <artifactId>junrar</artifactId>
                 <version>7.4.0</version>
             </dependency>
-            <dependency>
-                <groupId>com.github.fge</groupId>
-                <artifactId>json-schema-validator</artifactId>
-                <version>2.2.6</version>
-            </dependency>
             <!-- upgrade dependency from TIKA -->
             <dependency>
                 <groupId>org.jsoup</groupId>
@@ -645,7 +601,7 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-compress</artifactId>
-                <version>${dependency.apache-compress.version}</version>
+                <version>1.20</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -657,57 +613,68 @@
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>${dependency.postgresql.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${dependency.mysql.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.mariadb.jdbc</groupId>
                 <artifactId>mariadb-java-client</artifactId>
                 <version>${dependency.mariadb.version}</version>
+                <scope>test</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.alfresco.tas</groupId>
                 <artifactId>utility</artifactId>
                 <version>${dependency.tas-utility.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>io.rest-assured</groupId>
                 <artifactId>rest-assured</artifactId>
                 <version>${dependency.rest-assured.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.alfresco.tas</groupId>
                 <artifactId>restapi</artifactId>
                 <version>${dependency.tas-restapi.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.alfresco.tas</groupId>
                 <artifactId>cmis</artifactId>
                 <version>${dependency.tas-cmis.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.alfresco.tas</groupId>
                 <artifactId>email</artifactId>
                 <version>${dependency.tas-email.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.alfresco.tas</groupId>
                 <artifactId>webdav</artifactId>
                 <version>${dependency.tas-webdav.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.alfresco.tas</groupId>
                 <artifactId>ftp</artifactId>
                 <version>${dependency.tas-ftp.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.alfresco.test</groupId>
                 <artifactId>dataprep</artifactId>
                 <version>${dependency.tas-dataprep.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>joda-time</groupId>
@@ -720,29 +687,27 @@
                 <groupId>javax.servlet</groupId>
                 <artifactId>javax.servlet-api</artifactId>
                 <version>3.0.1</version>
+                <scope>provided</scope>
             </dependency>
 
             <!-- Test only dependencies, as popped up while running mvn test -->
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.13.2</version>
+                <version>4.13.1</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.antlr</groupId>
                 <artifactId>gunit</artifactId>
                 <version>${dependency.antlr.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.mockito</groupId>
-                <artifactId>mockito-all</artifactId>
-                <version>${dependency.mockito-all.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
                 <version>${dependency.mockito-core.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>commons-dbcp</groupId>
@@ -821,37 +786,7 @@
                 <groupId>org.apache.camel</groupId>
                 <artifactId>camel-mock</artifactId>
                 <version>${dependency.camel.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.taglibs</groupId>
-                <artifactId>taglibs-standard-spec</artifactId>
-                <version>${dependency.apache.taglibs.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.taglibs</groupId>
-                <artifactId>taglibs-standard-impl</artifactId>
-                <version>${dependency.apache.taglibs.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.taglibs</groupId>
-                <artifactId>taglibs-standard-jstlel</artifactId>
-                <version>${dependency.apache.taglibs.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.reflections</groupId>
-                <artifactId>reflections</artifactId>
-                <version>0.9.12</version>
-            </dependency>
-            <!-- swagger parser -->
-            <dependency>
-                <groupId>io.swagger</groupId>
-                <artifactId>swagger-parser</artifactId>
-                <version>${dependency.swagger-parser.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>1.18.6</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -873,23 +808,8 @@
                     <version>0.34.1</version>
                 </plugin>
                 <plugin>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.2</version>
-                    <configuration>
-                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                        <runOrder>alphabetical</runOrder>
-                        <argLine>
-                            --illegal-access=permit
-                        </argLine>
-                    </configuration>
-                </plugin>
-                <plugin>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>3.2.0</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-war-plugin</artifactId>
-                    <version>3.2.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -906,17 +826,8 @@
                     <artifactId>maven-dependency-plugin</artifactId>
                     <version>3.1.2</version>
                 </plugin>
-                <plugin>
-                    <artifactId>maven-assembly-plugin</artifactId>
-                    <version>3.3.0</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.alfresco.maven.plugin</groupId>
-                    <artifactId>alfresco-maven-plugin</artifactId>
-                    <version>${alfresco.maven-plugin.version}</version>
-                    <extensions>true</extensions>
-                </plugin>
             </plugins>
         </pluginManagement>
     </build>
+
 </project>
